--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1 style = 'background-color: MediumSeaGreen;'>OMG GUYS WE MADE A WEBSITE!!!!!</h1>
-<p style = 'color:DodgerBlue;'>Isn't this so cool?!</p>
+<h1 style = "background-color: MediumSeaGreen;">OMG GUYS WE MADE A WEBSITE!!!!!</h1>
+<p style = "color:DodgerBlue;">Here's the strat of the webpage</p>
