--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1 style = "background-color: MediumSeaGreen;">OMG GUYS WE MADE A WEBSITE!!!!!</h1>
 <p style = "color:DodgerBlue;">Here's the strat of the webpage</p>
+<button type="button" onclick="alert('ooOOOo looke what i can do!')">Click Me!</button>
