--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<h1 style = "background-color: MediumSeaGreen;">OMG GUYS WE MADE A WEBSITE!!!!!</h1>
-<p style = "color:DodgerBlue;">Here's the start of the webpage</p>
+<body style = "background-image: url('https://images3.privateschoolreview.com/photo/780x600/14000/13987/Greenhills-School-eJIcIQ.jpg')">
+<h1 style = "color: MediumSeaGreen; background-color: White;">OMG GUYS WE MADE A WEBSITE!!!!!</h1>
+<p style = "color:DodgerBlue; background-color: White;">Here's the start of the webpage</p>
 <button type="button" onclick="alert('ooOOOo look what i can do!')">Click Me!</button>
-<img src="https://images3.privateschoolreview.com/photo/780x600/14000/13987/Greenhills-School-eJIcIQ.jpg alt="Greenhills front entrance" width="150" height="120;">
+</body>
