--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body style = "background-image: url('https://images3.privateschoolreview.com/photo/780x600/14000/13987/Greenhills-School-eJIcIQ.jpg')">
-<h1 style = "color: MediumSeaGreen; background-color: White;">OMG GUYS WE MADE A WEBSITE!!!!!</h1>
+<h1 style = "color: MediumSeaGreen; background-color: White;">OMG WE MADE A WEBSITE!!!!!</h1>
 <p style = "color:DodgerBlue; background-color: White;">Here's the start of the webpage</p>
 <button type="button" onclick="alert('ooOOOo look what i can do!')">Click Me!</button>
 </body>
