--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 100%;
+        height: 700px;
+        width: 1000px;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
@@ -13,7 +14,7 @@
         padding: 0;
       }
     </style>
-<body style = "background-image: url('https://images3.privateschoolreview.com/photo/780x600/14000/13987/Greenhills-School-eJIcIQ.jpg')">
+<body>
 <h1 style = "color: MediumSeaGreen; background-color: White; font-size: 300%; text-align: center;">OMG WE MADE A WEBSITE!!!!!</h1>
 <p style = "color:DodgerBlue; background-color: White; font-size: 200%; text-align: center;">Here's the start of the webpage</p>
 <button type="button" onclick="alert('ooOOOo look what i can do!')">Click Me!</button>
