Still trying for map button

--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlTUmh8diT6wtCBBHXN2Ek46zyrwdBis4&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlTUmh8diT6wtCBBHXN2Ek46zyrwdBis4&callback=myFunction">
     function myFunction() {
-    document.getElementById("map").innerHTML = "Hello World";
+        initMap()
+    
 }
     </script>
 </body>
