--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <h1 style = "color: MediumSeaGreen; background-color: White; font-size: 300%; text-align: center;">OMG WE MADE A WEBSITE!!!!!</h1>
 <p style = "color:DodgerBlue; background-color: White; font-size: 200%; text-align: center;">Here's the start of the webpage</p>
-<button type="button" onclick="myFunction()">Map</button>
+<button type="button" onclick="initMap()">Map</button>
 
 <div id="map"></div>
     <script>
@@ -39,8 +39,7 @@
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlTUmh8diT6wtCBBHXN2Ek46zyrwdBis4&callback=myFunction">
-    function myFunction() {
-        initMap()
+    
     
 }
     </script>
