Still map button

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlTUmh8diT6wtCBBHXN2Ek46zyrwdBis4&callback=myFunction">
-    
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlTUmh8diT6wtCBBHXN2Ek46zyrwdBis4&callback=initMap">
+    <button type="button" onclick="initMap()">Map</button>
     
 }
     </script>
