--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlTUmh8diT6wtCBBHXN2Ek46zyrwdBis4&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlTUmh8diT6wtCBBHXN2Ek46zyrwdBis4&callback=myFunction">
     <button type="button" onclick="initMap()">Map</button>
     
 }
