--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       }
     </style>
 <body>
-<h1 style = "color: MediumSeaGreen; background-color: White; font-size: 300%; text-align: center;">OMG WE MADE A WEBSITE!!!!!</h1>
-<p style = "color:DodgerBlue; background-color: White; font-size: 200%; text-align: center;">Here's the start of the webpage</p>
-<button type="button" onclick="initMap()">Map</button>
+<h1 style = "color: MediumSeaGreen; background-color: Black; font-size: 400%; text-align: center; font-family: georgia;">Gryph-On-Wheels</h1>
+<p style = "color:DodgerBlue; background-color: White; font-size: 200%; text-align: center; font-family: georgia;">Welcome to the Greenhills School carpool page!</p>
+<button type="button" onclick="initMap()" style="color:MediumSeaGreen; background-color: Black; font-size:100%;" class="btn btn-primary btn-lg"> >Map</button>
 
 <div id="map"></div>
     <script>
