--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <h1 style = "color: MediumSeaGreen; background-color: Black; font-size: 400%; text-align: center; font-family: georgia;">Gryph-On-Wheels</h1>
 <p style = "color:DodgerBlue; background-color: White; font-size: 200%; text-align: center; font-family: georgia;">Welcome to the Greenhills School carpool page!</p>
-<button type="button" onclick="initMap()" style="color:MediumSeaGreen; background-color: Black; font-size:100%;" > Map</button>
+<button type="button" onclick="initMap()" style="color:DodgerBlue; background-color: Black; font-size:100%;" > Map</button>
 
 <div id="map"></div>
     <script>
