--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       }
     </style>
 <body>
-<h1 style = "color: MediumSeaGreen; background-color: Black; font-size: 300%; text-align: center; text-family: georgia;">Gryph-On-Wheels</h1>
-<p style = "color:DodgerBlue; background-color: White; font-size: 200%; text-align: center; text-family: georgia;">Welcome to the Greenhills carpool website!</p>
-<button type="button" onclick="initMap()" style="color:MediumSeaGreen; background-color: black; text-family: georgia;">Map</button>
+<h1 style = "color: MediumSeaGreen; background-color: Black; font-size: 400%; text-align: center; font-family: georgia;">Gryph-On-Wheels</h1>
+<p style = "color:DodgerBlue; background-color: White; font-size: 200%; text-align: center; font-family: georgia;">Welcome to the Greenhills carpool website!</p>
+<button type="button" onclick="initMap()" style="color:MediumSeaGreen; background-color: black; font-family: georgia; font-size:100%;">Map</button>
 
 <div id="map"></div>
     <script>
