more background style

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         padding: 0;
       }
     </style>
-<body bgcolor="#222222">
-<h1 style = "color: Black; background-color:MediumSeaGreen; font-size: 400%; text-align: center; font-family: georgia;">Gryph-On-Wheels</h1>
-<p style = "color:black; background-color: White; font-size: 200%; text-align: center; font-family: georgia;">Welcome to the Greenhills carpool website!</p>
+<body bgcolor="#777777">
+<h1 style = "color: White; background-color:MediumSeaGreen; font-size: 400%; text-align: center; font-family: georgia;">Gryph-On-Wheels</h1>
+<p style = "color:black; background-color: #dddddd; font-size: 200%; text-align: center; font-family: georgia;">Welcome to the Greenhills carpool website!</p>
 <button type="button" onclick="initMap()" style="color:MediumSeaGreen; background-color: black; font-family: georgia; font-size:100%;">Map</button>
 
 <div id="map"></div>
