Changing map center and size

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       
       #map {
         height: 1000px;
-        width: 1500px;
+        width: 2000px;
+        align: middle;
       }
       
       html, body {
