--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 <body bgcolor="#eeeeee">
     <!--This is the part that indicates the style of the first heading-->
-<h1 style = "color: White; background-color:MediumSeaGreen; font-size: 400%; text-align: center; font-family: georgia; position:static;">Gryph-On-Wheels</h1>
+<h1 style = "color: White; background-color:MediumSeaGreen; font-size: 400%; text-align: center; font-family: georgia; ">Gryph-On-Wheels</h1>
     <!--This indicates the style of the second heading-->
 <h2 style = "color:black; background-color: #ffffff; font-size: 200%; text-align: center; font-family: georgia; ">Welcome to the Greenhills carpool website!</h2>
     <!--This sets the style of the map button and sayas that the map will appear when the button is clicked-->
