--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <!--This sets the style of the map button and sayas that the map will appear when the button is clicked-->
 <button type="button" onclick="initMap()" style="color: white; background-color: MediumSeaGreen; font-family: georgia; font-size:200%;">Map</button>
 <!--This is the function that calls google maps and gives you the map-->
-<button type="button" onclick="<iframe src="https://calendar.google.com/calendar/embed?src=gryphonwheels.website%40gmail.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>">Calendar</button>
+<button type="button" onclick="calendar()">Calendar</button>
 <div id="map"></div>
     <script>
-       
+      function calendar(){
+          <iframe src="https://calendar.google.com/calendar/embed?src=gryphonwheels.website%40gmail.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      };
       function initMap() {
         var myLatLng = {lat: 42.285438, lng: -83.679639};
         var map = new google.maps.Map(document.getElementById('map'), {
