Still trying to make the calendar button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlTUmh8diT6wtCBBHXN2Ek46zyrwdBis4&callback=myFunction">
     <button type="button" onclick="initMap()">Map</button>
-    
-}
+    <button type="button" onclick="calendar()">Calendar</button>
+        }
     </script>
 </body>
