There is now a calendar button but it doesn't do anything

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--This sets the style of the map button and sayas that the map will appear when the button is clicked-->
 <button type="button" onclick="initMap()" style="color: white; background-color: MediumSeaGreen; font-family: georgia; font-size:200%;">Map</button>
 <!--This is the function that calls google maps and gives you the map-->
-<button type="button" onclick="calendar()">Calendar</button>
+<button type="button" onclick="calendar()" style="color:white; background-color: MediumSeaGreen; font-family: georgia; font-size:200%;">Calendar</button>
 <div id="map"></div>
     <script>
       function calendar(){
