--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!--This sets the style of the map button and sayas that the map will appear when the button is clicked-->
 <button type="button" onclick="initMap()" style="color: white; background-color: MediumSeaGreen; font-family: georgia; font-size:200%;">Map</button>
 <!--This is the function that calls google maps and gives you the map-->
-<button type="button" onclick="<iframe src="https://calendar.google.com/calendar/embed?src=gryphonwheels.website%40gmail.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>" style="color:white; background-color: MediumSeaGreen; font-family: georgia; font-size:200%;">Calendar</button>
+<button type="button" onclick="drawCalendar()" style="color:white; background-color: MediumSeaGreen; font-family: georgia; font-size:200%;">Calendar</button>
+    <iframe src="https://calendar.google.com/calendar/embed?src=gryphonwheels.website%40gmail.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 <div id="map"></div>
     <script>
       
