--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <style>
       
       #map {
-        height: 1000px;
-        width: 2000px;
+        height: 100%;
+        width: 100%;
         align: middle;
       }
       
