--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+<div style="width:75%;height:0;padding-bottom:75%;position:relative;"><iframe src="https://giphy.com/embed/xT0xernwpgem03Fw4w" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/xT0xernwpgem03Fw4w"></a></p>
     <style>
       
       #map {
