--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 <body bgcolor="#dddddd">
     <!--This is the part that indicates the style of the first heading-->
-<h1 style = "color: White; background-color:MediumSeaGreen; font-size: 370%; text-align: center; font-family:georgia; ">Gryph-On-Wheels</h1>
+<h1 style = "color: White; background-color:#006400; font-size: 370%; text-align: center; font-family:georgia; ">Gryph-On-Wheels</h1>
     <!--This indicates the style of the second heading-->
 <h2 style = "color:black; background-color: #ffffff; font-size: 270%; text-align: center; font-family: georgia; ">Welcome to the Greenhills carpool website!</h2>
     <!--This sets the style of the map button and sayas that the map will appear when the button is clicked-->
