--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <!--This indicates the style of the second heading-->
 <h2 style = "color:black; background-color: #ffffff; font-size: 270%; text-align: center; font-family: georgia; ">Welcome to the Greenhills carpool website!</h2>
     <!--This sets the style of the map button and sayas that the map will appear when the button is clicked-->
-<button type="button" onclick="initMap()" style="color: white; background-color: MediumSeaGreen; font-family: georgia; font-size:170%;">Map</button>
+<button type="button" onclick="initMap()" style="color: white; background-color: #006400; font-family: georgia; font-size:170%;">Map</button>
 <!--This is the function that calls google maps and gives you the map-->
-<button type="button" onclick="alert('Sorry the calendar is not working right now')" style="color:white; background-color: MediumSeaGreen; font-family: georgia; font-size:170%;">Calendar</button>
+<button type="button" onclick="alert('Sorry the calendar is not working right now')" style="color:white; background-color: #006400; font-family: georgia; font-size:170%;">Calendar</button>
 <button type="button" onclick= "myFunction()" style="color: white; background-color: MediumSeaGreen; font-family: georgia; font-size:170%;">About</button>   
 
 <div id="myDIV">
