--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
         margin: 0;
         padding: 0;
       }
-        #myDIV {
-    width: 100%;
-    padding: 75px 0;
-    text-align: center;
-    background-color: white;
-    margin-top: 100px;
+    #myDIV {
+        position: relative;
+        left:300px;
+        height: 500px;
+        padding: 50px;
+        text-align: left;
+        background-color: white;
+        margin-top: 100px;
       }
     </style>
 <body bgcolor="#dddddd">
