--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
       }
     #myDIV {
         position: relative;
-        left:300px;
-        height: 500px;
-        padding: 50px;
+        left:700px;
+        height: 100px;
+        padding: 20px;
         text-align: left;
         background-color: white;
         margin-top: 100px;
+        width: 200px;
       }
     </style>
 <body bgcolor="#dddddd">
