maybe some more text idk

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
         margin-top: 100px;
         width: 200px;
       }
+      #welcome{
+          position: relative;
+          left: 10px;
+          height: 100px;
+          padding: 20px;
+          text-align: center;
+          background-color: white;
+          width: 300px;
+        }
     </style>
 <body bgcolor="#dddddd">
     <!--This is the part that indicates the style of the first heading-->
@@ -39,6 +48,9 @@
 <div id="myDIV">
 Made by Sydney Cha, Nik Srinivasan, Alena Song, and Claire Miech, wth the help of the wonderful coding club led by Mr.Kahn and Ms.Flohr!
 </div>
+<div id='welcome'>
+    Welcome to the Greenhills Carpool Website
+    </div>
    
 <div id="map"></div>
     <script>
