--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
           text-align: center;
           background-color: white;
           width: 300px;
+          font-size: 50px;
         }
+        img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+    position:relative;
+     left: 20px;
+    }
     </style>
 <body bgcolor="#dddddd">
     <!--This is the part that indicates the style of the first heading-->
@@ -44,14 +53,14 @@
 <!--This is the function that calls google maps and gives you the map-->
 <button type="button" onclick="alert('Sorry the calendar is not working right now')" style="color:white; background-color: #006400; font-family: georgia; font-size:170%;">Calendar</button>
 <button type="button" onclick= "myFunction()" style="color: white; background-color: #006400; font-family: georgia; font-size:170%;">About</button>   
-
+<img src=https://schoolassets.s3.amazonaws.com/logos/108433/108433.png/ alt="Gryphon" style="width:200px">
 <div id="myDIV">
 Made by Sydney Cha, Nik Srinivasan, Alena Song, and Claire Miech, wth the help of the wonderful coding club led by Mr.Kahn and Ms.Flohr!
 </div>
 <div id='welcome'>
-    Welcome to the Greenhills Carpool Website
+    Welcome to the Greenhills Carpool Website!
     </div>
-   
+
 <div id="map"></div>
     <script>
         function myFunction() {
