Trying to do more with the picture

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         padding: 0;
       }
     #myDIV {
-        position: relative;
+        position: fixed;
         left:700px;
         height: 100px;
         padding: 20px;
@@ -23,15 +23,16 @@
         background-color: white;
         margin-top: 100px;
         width: 200px;
+        font-size:20px;
       }
       #welcome{
-          position: relative;
+          position: fixed;
           left: 10px;
-          height: 100px;
+          height: 200px;
           padding: 20px;
           text-align: center;
           background-color: white;
-          width: 300px;
+          width: 700px;
           font-size: 50px;
         }
         img {
@@ -39,8 +40,9 @@
     border-radius: 4px;
     padding: 5px;
     width: 150px;
-    position:relative;
-     left: 20px;
+    position:fixed;
+     left: 500px;
+          
     }
     </style>
 <body bgcolor="#dddddd">
@@ -53,7 +55,7 @@
 <!--This is the function that calls google maps and gives you the map-->
 <button type="button" onclick="alert('Sorry the calendar is not working right now')" style="color:white; background-color: #006400; font-family: georgia; font-size:170%;">Calendar</button>
 <button type="button" onclick= "myFunction()" style="color: white; background-color: #006400; font-family: georgia; font-size:170%;">About</button>   
-<img src=https://schoolassets.s3.amazonaws.com/logos/108433/108433.png/ alt="Gryphon" style="width:200px">
+<img src='https://schoolassets.s3.amazonaws.com/logos/108433/108433.png/' alt="Gryphon" style="width:200px">
 <div id="myDIV">
 Made by Sydney Cha, Nik Srinivasan, Alena Song, and Claire Miech, wth the help of the wonderful coding club led by Mr.Kahn and Ms.Flohr!
 </div>
