changed style and alignment

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         margin: 0;
         padding: 0;
       }
-    #myDIV {
+    #about {
         position: fixed;
-        left:700px;
+        left:1000px;
         height: 100px;
         padding: 20px;
         text-align: left;
         background-color: white;
         margin-top: 100px;
-        width: 200px;
+        width: 300px;
         font-size:20px;
       }
       #welcome{
@@ -34,6 +34,7 @@
           background-color: white;
           width: 700px;
           font-size: 50px;
+          margin: auto;
         }
         img {
     border: 1px solid #ddd;
@@ -41,22 +42,20 @@
     padding: 5px;
     width: 150px;
     position:fixed;
-     left: 500px;
+     left: 15000px;
           
     }
     </style>
 <body bgcolor="#dddddd">
     <!--This is the part that indicates the style of the first heading-->
 <h1 style = "color: White; background-color:#006400; font-size: 370%; text-align: center; font-family:georgia; ">Gryph-On-Wheels</h1>
-    <!--This indicates the style of the second heading-->
-<h2 style = "color:black; background-color: #ffffff; font-size: 270%; text-align: center; font-family: georgia; ">Welcome to the Greenhills carpool website!</h2>
     <!--This sets the style of the map button and sayas that the map will appear when the button is clicked-->
 <button type="button" onclick="initMap()" style="color: white; background-color: #006400; font-family: georgia; font-size:170%;">Map</button>
 <!--This is the function that calls google maps and gives you the map-->
 <button type="button" onclick="alert('Sorry the calendar is not working right now')" style="color:white; background-color: #006400; font-family: georgia; font-size:170%;">Calendar</button>
 <button type="button" onclick= "myFunction()" style="color: white; background-color: #006400; font-family: georgia; font-size:170%;">About</button>   
 <img src='https://schoolassets.s3.amazonaws.com/logos/108433/108433.png/' alt="Gryphon" style="width:200px">
-<div id="myDIV">
+<div id="about">
 Made by Sydney Cha, Nik Srinivasan, Alena Song, and Claire Miech, wth the help of the wonderful coding club led by Mr.Kahn and Ms.Flohr!
 </div>
 <div id='welcome'>
