messed stuff up so now im fixing it (hopefully)

--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
       }
       #welcome{
           position: fixed;
-          left: 10px;
+          left: 50%;
           height: 200px;
           padding: 20px;
           text-align: center;
           background-color: white;
           width: 700px;
           font-size: 50px;
-          margin: auto;
         }
         img {
     border: 1px solid #ddd;
@@ -65,7 +64,7 @@ Made by Sydney Cha, Nik Srinivasan, Alena Song, and Claire Miech, wth the help o
 <div id="map"></div>
     <script>
         function myFunction() {
-    var x = document.getElementById("myDIV");
+    var x = document.getElementById("about");
     if (x.style.display === "none") {
         x.style.display = "block";
     } else {
