--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
       #welcome{
           position: fixed;
-          left: 800px;
+          align; middle;
           height: 200px;
           padding: 20px;
           text-align: center;
