--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
     <meta charset="utf-8">
 
     <style>
-      
+      .button{
+          left:10px
+        }
       #map {
         height: 100%;
         width: 100%;
@@ -27,7 +29,7 @@
       }
       #welcome{
           position: fixed;
-          align; middle;
+          align: middle;
           height: 200px;
           padding: 20px;
           text-align: center;
