--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       }
     #about {
         position: fixed;
-        left:1000px;
+        left:10px;
         height: 100px;
         padding: 20px;
         text-align: left;
@@ -26,10 +26,11 @@
         margin-top: 100px;
         width: 300px;
         font-size:20px;
+        top: 50px;
       }
       #welcome{
           position: fixed;
-          align: middle;
+          left:500px;
           height: 200px;
           padding: 20px;
           text-align: center;
