the picture works!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     #about {
         position: fixed;
         left:10px;
-        height: 100px;
+        height: 120px;
         padding: 20px;
         text-align: left;
         background-color: white;
@@ -36,16 +36,16 @@
           text-align: center;
           background-color: white;
           width: 700px;
-          font-size: 50px;
+          font-size: 80px;
         }
         img {
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
-    width: 150px;
+    width: 300px;
     position:fixed;
-     left: 1500px;
-          
+     left: 1200px;
+       height: 300px
     }
     </style>
 <body bgcolor="#dddddd">
