everythings good but the car

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
        height: 300px
     }
         #car{
+            position: relative;
             width:200px;
             left: 10px;
             height: 100px;
