The site looks different on a laptop and desktop

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         padding: 0;
       }
     #about {
-        position: fixed;
+        position: relative;
         left:10px;
         height: 120px;
         padding: 20px;
@@ -29,8 +29,8 @@
         top: 300px;
       }
       #welcome{
-          position: fixed;
-          left:500px;
+          position: relative;
+          left:50%;
           height: 300px;
           padding: 20px;
           text-align: center;
