that didnt work

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       }
       #welcome{
           position: relative;
-          left:50%;
+          left:700px;
           height: 300px;
           padding: 20px;
           text-align: center;
@@ -43,7 +43,7 @@
     border-radius: 4px;
     padding: 5px;
     width: 700px;
-    position:fixed;
+    position:relative;
      left: 1400px;
        height: 300px
     }
