--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         padding: 0;
       }
     #about {
-        position: relative;
+        position: fixed;
         left:10px;
         height: 120px;
         padding: 20px;
@@ -29,8 +29,8 @@
         top: 300px;
       }
       #welcome{
-          position: relative;
-          left:700px;
+          position: fixed;
+          left:500px;
           height: 300px;
           padding: 20px;
           text-align: center;
@@ -43,7 +43,7 @@
     border-radius: 4px;
     padding: 5px;
     width: 700px;
-    position:relative;
+    position:fixed;
      left: 1400px;
        height: 300px
     }
