changing background color

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     }
      
     </style>
-<body bgcolor="#dddddd">
+<body bgcolor="#ffffff">
     <!--This is the part that indicates the style of the first heading-->
 <h1 style = "color: White; background-color:#006400; font-size: 370%; text-align: center; font-family:georgia; ">Gryph-On-Wheels</h1>
     <!--This sets the style of the map button and sayas that the map will appear when the button is clicked-->
