adding other stuff

--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
      left: 1400px;
        height: 300px
     }
-     
+     #list{
+        position: fixed;
+          left:350px;
+          height: 200px;
+          padding: 20px;
+          text-align: left;
+          background-color: white;
+          width: 500px;
+          font-size: 40px;
+          top:500px;
+        }
     </style>
 <body bgcolor="#ffffff">
     <!--This is the part that indicates the style of the first heading-->
@@ -66,7 +76,11 @@ Made by Sydney Cha, Nik Srinivasan, Alena Song, and Claire Miech, wth the help o
 <div id='welcome'>
     Welcome to the Greenhills Carpool Website!
     </div>
-
+<div id='list'>
+    -Find rides to school events
+    -Get rides to sports 
+    -Carpool to school
+    </div>
 <div id="map"></div>
     <script>
         function myFunction() {
