Line break stuff

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ Made by Sydney Cha, Nik Srinivasan, Alena Song, and Claire Miech, wth the help o
     Welcome to the Greenhills Carpool Website!
     </div>
 <div id='list'>
-    -Find rides to school events
-    -Get rides to sports 
+    -Find rides to school events<br>
+    -Get rides to sports <br>
     -Carpool to school
     </div>
 <div id="map"></div>
